--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,10 @@ name: Build
 
 on:
   push:
-    branches: main
-  pull_request:
-    branches: '*'
+    branches:
+      - 'nesi-*'
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -15,11 +16,11 @@ jobs:
     - name: Install node
       uses: actions/setup-node@v1
       with:
-       node-version: '12.x'
+       node-version: '14.x'
     - name: Install Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.7'
+        python-version: '3.8'
         architecture: 'x64'
     
     
@@ -27,9 +28,9 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.cache/pip
-        key: pip-3.7-${{ hashFiles('package.json') }}
+        key: pip-3.8-${{ hashFiles('package.json') }}
         restore-keys: |
-          pip-3.7-
+          pip-3.8-
           pip-
 
     - name: Get yarn cache directory path
@@ -45,14 +46,26 @@ jobs:
           yarn-
     
     - name: Install dependencies
-      run: python -m pip install -U jupyterlab~=3.0 jupyter_packaging~=0.7.9
+      run: python -m pip install -U jupyterlab~=3.1
+
     - name: Build the extension
       run: |
         jlpm
         jlpm run eslint:check
-        python -m pip install .
+        
+        python -m pip install build
+        python -m build
+        python -m pip install dist/*.whl
 
         jupyter server extension list 2>&1 | grep -ie "jupyterlab_slurm.*OK"
 
         jupyter labextension list 2>&1 | grep -ie "jupyterlab-slurm.*enabled"
         python -m jupyterlab.browser_check
+
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          dist/*.tar.gz
+          dist/*.whl
