--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
         jupyter server extension list 2>&1 | grep -ie "jupyterlab_slurm.*OK"
 
         jupyter labextension list 2>&1 | grep -ie "jupyterlab-slurm.*enabled"
-        python -m jupyterlab.browser_check
+        #python -m jupyterlab.browser_check
 
     - name: Release
       uses: softprops/action-gh-release@v1
